--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <string name="tab_menu_pizza">Пиццы</string>
     <string name="tab_menu_burger">Бургеры</string>
+    <string name="tab_menu_salad">Салаты</string>
+    <string name="tab_menu_meat">Шашлыки</string>
+    <string name="tab_menu_sandvich">Лаваш/Сендвич</string>
+    <string name="tab_menu_soup">Суп</string>
+    <string name="tab_menu_snacks">Закуски</string>
+    <string name="tab_menu_drink">Напитки</string>
+
 </resources>
