--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="come_in">Войти</string>
     <string name="registration">Регистрация</string>
     <string name="add_to_cart">В корзину</string>
+    <string name="to_cart">В корзине</string>
     <string name="plus">+</string>
     <string name="minus">-</string>
     <string name="uikit_delete">Удалить</string>
+    <string name="count_text">сум/шт</string>
 </resources>
