coil и много разного

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="tab_menu_soup">Суп</string>
     <string name="tab_menu_snacks">Закуски</string>
     <string name="tab_menu_drink">Напитки</string>
+    <string name="tab_menu_bread">Хлеб</string>
 
 </resources>
