Внедрение компонента CardBasketComponent

--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
 
     <string name="insert_products">Товары (%1$s)</string>
     <string name="insert_sum">%1$s сум</string>
+    <string name="insert_sum_count">%1$s сум/шт</string>
+    <string name="insert_count_sum_all">%1$s шт - %2$s сум</string>
 </resources>
