--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="insert_count_sum_all">%1$s шт - %2$s сум</string>
 
     <string name="description_cover">Изображение</string>
+
+    <string name="dialog_button_positive">ОК</string>
 </resources>
