--- a/restaurant/src/main/res/values/strings.xml
+++ b/restaurant/src/main/res/values/strings.xml
@@ -26,4 +26,8 @@
     <string name="error_request_message">Ведутся технические работы</string>
 
     <string name="screen_orders_title">Мои заказы</string>
+
+    <string name="title_bonus">%1$s бонусов</string>
+
+    <string name="accessibility_no_orders">У Вас нет заказов</string>
 </resources>
