--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="basket_count_text">Корзина (%1$s)</string>
     <string name="order_text">Мои заказы</string>
     <string name="profile_text">Профиль</string>
+    <string name="settings_text">Настройки</string>
+    <string name="save_text">Сохранить</string>
 
     <string name="insert_products">Товары (%1$s)</string>
     <string name="insert_sum">%1$s сум</string>
