--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="profile_text">Профиль</string>
     <string name="settings_text">Настройки</string>
     <string name="save_text">Сохранить</string>
+    <string name="geolocation_text">Моя позиция</string>
 
     <string name="insert_products">Товары (%1$s)</string>
     <string name="insert_sum">%1$s сум</string>
