--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="basket_count_text">Корзина (%1$s)</string>
     <string name="order_text">Мои заказы</string>
     <string name="profile_text">Профиль</string>
+    <string name="about_text">О ресторане</string>
     <string name="settings_text">Настройки</string>
     <string name="save_text">Сохранить</string>
     <string name="geolocation_text">Моя позиция</string>
